# Robotics-projects_cpp

./: CMakeLists.txt  README.md  package.xml
include/simple_navigator/: obstacle_detector.hpp  simple_navigator.hpp
launch/: navigate_launch.py
src/: obstacle_detector.cpp  simple_navigator.cpp
